se actualizo el index y el style

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ A nivel operativo para el uso empresarial, la IA es un conjunto de tecnologías 
                     <th colspan="4">BIOGRAFIA</th>
                 <tr>
                     <td><img src="imagenes/WhatsApp Image 2025-07-14 at 8.39.48 PM.jpeg" width="100px"></td>
-                    <td> soy una persona muy cariñosa</td>
+                    <td> soy una persona muy activa </td>
                 </tr>
 
 
@@ -116,7 +116,7 @@ A nivel operativo para el uso empresarial, la IA es un conjunto de tecnologías 
                     <td colspan="2">
                         <ol>
                             <li>Honestidad</li>
-                            <li>Respeto</li>
+                            <li>empatico</li>
                             <li>Resiliente</li>
                         </ol>
                     </td>
@@ -124,10 +124,7 @@ A nivel operativo para el uso empresarial, la IA es un conjunto de tecnologías 
 
             </table>
     <footer>
-        <h2> &copy; MICHEL MUÑOZ - MI PRIMERA PAGINA WEB</h2>
+        <h2> &copy; ANDERSON DUQUE - MI PRIMERA PAGINA WEB -</h2>
     </footer>
-
-          
-
 </body>
 </html>
